--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Redirecting...
-    </title>
-  </head>
-  <body>
-    <script>
-      window.location = "https://example.com"
-    </script>
-  </body>
+    <head>
+        <title>Select Repository</title>
+        <style>
+            body {
+                padding: 20px;
+                color: white;
+            }
+            a {
+                color: aqua;
+                text-decoration: none;
+            }
+        </style>
+    </head>
+    <body style="background-color:#000000">
+        <h1>Select Repository</h1>
+        <ul>
+            <li><a href="/htmlgames">HTMLgames</a></li>
+            <li><a href="/apps">UtilApps</a></li>
+        </ul>
+    </body>
 </html>
