Replace UtilApps link with Youtube Video Embedder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Select Repository</h1>
         <ul>
             <li><a href="/htmlgames">HTMLgames</a></li>
-            <li><a href="/apps">UtilApps</a></li>
+            <li><a href="https://muyaomw.wixsite.com/apps/youtube">Youtube Video Embedder</a></li>
         </ul>
     </body>
 </html>
