--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Select Repository</title>
+        <title>Select App</title>
         <style>
             body {
                 padding: 20px;
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body style="background-color:#000000">
-        <h1>Select Repository</h1>
+        <h1>Select App</h1>
         <ul>
             <li><a href="/htmlgames">HTMLgames</a></li>
             <li><a href="https://muyaomw.wixsite.com/apps/youtube">Youtube Video Embedder</a></li>
