Add CPS Tester link to index.html
Added CPS Tester link to the app selection list.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul>
             <li><a href="/htmlgames">HTMLgames</a></li>
             <li><a href="https://muyaomw.wixsite.com/apps/youtube">Youtube Video Embedder</a></li>
+            <li><a href="/cpstest">CPS Tester</a></li>
         </ul>
     </body>
 </html>
